# SilverPatcher

./: BinaryAnalyzer.cpp  BinaryAnalyzer.h  BinaryEditor.cpp  BinaryEditor.h  BindNowPolicy.cpp  BindNowPolicy.h  BindShellCodeProvider.cpp  BindShellCodeProvider.h  CMakeLists.txt  CSEngine.cpp  CSEngine.h  Capture01CodeProvider.cpp  Capture01CodeProvider.h  ClearBackdoorCodeProvider.cpp  ClearBackdoorCodeProvider.h  Config.cpp  Config.h  DisableFreePolicy.cpp  DisableFreePolicy.h  ELF自动化补丁工具开发指南.pptx  FmtVulScanRepairPolicy.cpp  FmtVulScanRepairPolicy.h  GeneralCodeProvider.h  InstrumentManager.cpp  InstrumentManager.h  KSEngine.cpp  KSEngine.h  LibelfEditor.cpp  LibelfEditor.h  MainInjectPolicy.cpp  MainInjectPolicy.h  ModifyLibcCodeProvider.cpp  ModifyLibcCodeProvider.h  PatchPolicy.h  README.md  RandomPLTGOTPolicy.cpp  RandomPLTGOTPolicy.h  ResortGotEntryPolicy.cpp  ResortGotEntryPolicy.h  RiseStackPolicy.cpp  (+14 more)
Capture01Service/: capparser.c  capserver.c
SilverReplay/: SilverReplay.vcxproj  main.cpp
ctf_wrapper/: main.cpp
